[project]
name = "anu-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "pandas>=2.3.3",
    "resend>=2.19.0",
    "sib-api-v3-sdk>=7.6.0",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
]
